Revision history for {{$dist->name}}

{{$NEXT}}

2.006000  2011-01-31 18:06:56 CST6CDT
       - Add ResultSet::ResultClassDWIM to allow ::HashRefInflator (or ::HRI)
       - Add Schema::GenerateSource for handy addition of subclassed results

2.005000  2010-10-13 19:39:56 CST6CDT
       - Add ResultSet::Me to define predefined searches a more nicely
       - Fix DBIx::Class::Helper::ResultSet::Random to not base off Union
       - Fix DBIx::Class::Helper::ResultSet::Random for MSSQL

2.004000  2010-07-29 21:06:58 CST6CDT
       - Add Row::StorageValues
       - Add Row::OnColumnChange
       - Add Candy exports

2.003002  2010-03-24 23:48:52 CST6CDT
       - Give up on generating test database; I need to test this out
         with development releases

2.003001  2010-03-23 18:41:04 CST6CDT
       - Try again to correctly generate test database

2.003000  2010-03-22 21:27:14 CST6CDT
       - Fix tests to correctly generate test database
       - Stop bundling sqlite database with distribution!
       - Change DBICH::Union into DBICH::SetOperations (nothingmuch)

2.002002  2010-03-14 20:18:59 CST6CDT
       - DBIx::Class::Helper::ResultSet::Random declared RAND() as the
         random function for PostgreSQL when Pg uses RANDOM(). This
         broke any use of that resultset on PostgreSQL. -avar

2.002001  2010-03-13 00:46:30 CST6CDT
       - Fix my silly Union code
       - Fix error message from Util for incorrectly design namespace
       - Fix SYNOPSES to point to correct Components
       - Change as_virtual_view to just pass through to the cored version, as_subselect_rs

2.00200   2010-02-05 14:15:06 CST6CDT
       - Allow multiple levels for result in namespace for get_namespace_parts
         (aka, Foo::Schema::Result::Baz::Biff) (for melo)
       - Add Helper::Row::ToJSON
       - Autopopulate is_numeric correcly with NumifyGet
       - Fix mssql Random to use RAND() (pldoh, #RT53885)

2.00102   2010-01-15 21:50:20 CST6CDT